test/org/midica/testfiles/failing/note-in-percussion-channel.midica
INCLUDE_FILE inc/instruments.midica

p c /4
